# candidate-transformer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test_shell.py
.github/workflows/: build-and-verify.yml
configs/: default.json  minimal.json
configs/projections/: analytics.json  ats.json  canonical.json  minimal.json  recruiter.json
docs/: PUBLISHING.md
exports/: analytics.json  ats.json  candidates.json  canonical.json  db.json  index.js  metadata.json  minimal.json  recruiter.json
sample_data/: ats.json  recruiter.csv  resume.txt
src/candidate_transformer/: __init__.py
src/candidate_transformer/api/: __init__.py  transformer.py
src/candidate_transformer/cli/: candidate_renderer.py  commands.py  context.py  main.py  projection_renderer.py  shell.py  workspace.py
src/candidate_transformer/config/: __init__.py  models.py
src/candidate_transformer/connectors/: __init__.py  csv_connector.py  json_connector.py  registry.py  resume_text_connector.py
src/candidate_transformer/domain/: __init__.py  models.py
src/candidate_transformer/exceptions/: __init__.py
src/candidate_transformer/export/: __init__.py  exporter.py  json_server.py  metadata.py
src/candidate_transformer/interfaces/: connector.py  normalizer.py  pipeline.py  strategy.py
src/candidate_transformer/normalizers/: __init__.py  basic.py  email.py  phone.py  registry.py
src/candidate_transformer/pipeline/: __init__.py  confidence.py  conflict_resolution.py  engine.py  entity_resolution.py  extraction.py  normalization.py  validation.py
src/candidate_transformer/projection/: __init__.py  engine.py
src/candidate_transformer/strategies/: __init__.py  confidence_scoring.py  conflict_resolution.py  entity_resolution.py  registry.py
src/candidate_transformer/utils/: formatting.py  logger.py  registry.py
src/candidate_transformer/validation/: __init__.py  output_validation.py
tests/cli/: test_transform_command.py  test_validate_command.py
tests/integration/: test_csv_pipeline.py  test_end_to_end.py  test_resume_pipeline.py  test_torture_regressions.py
tests/unit/: test_candidate_transformer.py  test_confidence_scoring.py  test_conflict_resolution.py  test_deduplication.py  test_email_normalizer.py  test_entity_resolution.py  test_json_server.py  test_normalization.py  test_phone_normalizer.py  test_projection.py  test_projection_engine.py  test_provenance.py
