[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "A production-grade Python framework for converting heterogeneous candidate information into canonical profiles."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Principal Engineer", email = "engineering@example.com" },
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "structlog>=23.1.0",
    "phonenumbers>=8.13.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]

[project.scripts]
candidate-transformer = "candidate_transformer.cli.main:app"
ctsh = "candidate_transformer.cli.shell:main"

[tool.hatch.build.targets.wheel]
packages = ["src/candidate_transformer"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "B904", "B024", "SIM105", "B008"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=candidate_transformer --cov-report=term-missing"
testpaths = ["tests"]
