[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profilefusion"
dynamic = ["version"]
description = "A production-grade Python framework for converting heterogeneous candidate information into canonical profiles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Suryanandan Babbar", email = "suryanandanbabbar@gmail.com" },
]
keywords = [
    "candidate",
    "resume",
    "ats",
    "entity-resolution",
    "canonical-model",
    "data-engineering",
    "hr-tech",
    "recruitment",
    "cli",
    "json-server"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "structlog>=23.1.0",
    "phonenumbers>=8.13.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "build",
    "twine"
]

[project.scripts]
profilefusion = "candidate_transformer.cli.main:app"
ctsh = "candidate_transformer.cli.shell:main"

[project.urls]
Homepage = "https://github.com/suryanandanbabbar/candidate-transformer"
Repository = "https://github.com/suryanandanbabbar/candidate-transformer.git"
Issues = "https://github.com/suryanandanbabbar/candidate-transformer/issues"

[tool.setuptools.dynamic]
version = {attr = "candidate_transformer.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "B904", "B024", "SIM105", "B008"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=candidate_transformer --cov-report=term-missing"
testpaths = ["tests"]
